Finishing layout of portbinding. TODO: handle data, convert to rest data

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -230,9 +230,9 @@
                                 <input type="text" class="form-control" ng-model="portBinding.hostPort" maxlength="5" size="5"
                                        placeholder="1-65535"
                                        aria-describedby="portBindingValidationStatus" ng-keyup="portBindingValidator()">
-                                <button ng-click="deleteExposedPortEntry($index)" title="Delete entry" type="submit"
+                                <button ng-click="deletePortBinding($index)" title="Delete entry" type="submit"
                                         class="btn btn-danger"
-                                        style="width: 40px; margin-right: 58px;margin-left: 3px;">
+                                        style="width: 40px; margin-right: 57px;margin-left: 3px;">
                                     <span class="fa fa-trash" style="font-size: large"></span>
                                 </button>
                                 </span>
