Adding forwarding to the create buttons to containers view

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 ">
     <h1><span class="fa fa-cube"></span> Create container
-        <button title="Create" type="submit" ng-click="createContainer()"
+        <button title="Create" type="submit" ng-click="createContainer(false)"
                 class="btn btn-success">
             <span class="fa fa-plus"></span> Create
         </button>
