--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
     <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
+    <link rel='stylesheet' href='assets/libs/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css'>
 </head>
 <body>
 <div id="header" class="navbar  navbar-fixed-top">
@@ -49,6 +50,8 @@
 <script src="assets/libs/bootstrap/dist/js/bootstrap.js"></script>
 <!---->
 <script src="assets/libs/angular/angular.js"></script>
+<script src="assets/libs/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+<script src="assets/libs/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
 <script src="assets/libs/angular-messages/angular-messages.js"></script>
 <script src="assets/libs/angular-route/angular-route.js"></script>
 <script src="assets/libs/angular-resource/angular-resource.js"></script>
